fix: YouTube on mobile

--- a/website/styles/Home.module.css
+++ b/website/styles/Home.module.css
@@ -128,3 +128,24 @@
     flex-direction: column;
   }
 }
+
+.videoContainer {
+  overflow: hidden;
+  position: relative;
+  width:30%;
+  min-width: 320px;
+}
+
+.videoContainer::after {
+  padding-top: 56.25%;
+  display: block;
+  content: '';
+}
+
+.videoContainer iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
